<resources>
    <string name="app_name">オタマネ・改</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="common_date_format">yyyy年MM月dd日</string>
    <string name="common_menu_label_add">追加</string>
    <string name="common_favorite">お気に入り</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>

    // Calendar
    <string name="calendar_event_label_empty">イベントがありません</string>

    // ChooseProductMenu
    <string name="choose_product_label_title">コンテンツ一覧</string>
    <string name="choose_product_label_sort">ソート</string>
    <string name="choose_product_label_twin">2列表示</string>
    <string name="choose_product_label_triple">3列表示</string>
    <string name="choose_product_label_favorite">お気に入り</string>
    <string name="choose_product_label_register_num">登録件数順</string>

    //AddProduct
    <string name="add_product_label_title">コンテンツ登録</string>
    <string name="add_product_label_input_name">コンテンツ名登録</string>
    <string name="add_product_label_input_name_sample">例：ラブライブ！</string>
    <string name="add_product_label_input_image">コンテンツ画像登録</string>
    <string name="add_product_label_input_image_select">画像を選択</string>

    // EventRegistetr
    <string name="event_register_label_submit">完了</string>
    <string name="event_register_label_title">%sのイベント登録</string>
    <string name="event_register_label_live">ライブ・ファンミーティング</string>
    <string name="event_register_label_bd">BD・DVD・CD発売</string>
    <string name="event_register_label_broadcast">生放送・ラジオ放送日</string>
    <string name="event_register_label_other">その他</string>
    <string name="event_register_label_empty">イベントを登録してください</string>
    <string name="event_register_dialog_label_name_hint">タイトルを入力</string>
    <string name="event_register_dialog_label_save">保存</string>
    <string name="event_register_dialog_label_change_date">クリックで変更</string>
    <string name="event_register_dialog_label_opentime">開場時間</string>
    <string name="event_register_dialog_label_curtaintime">開演時間</string>
    <string name="event_register_dialog_label_all_day">終日</string>
    <string name="event_register_dialog_label_repeat">繰り返しイベント</string>
    <string name="event_register_dialog_label_sale">物販の有無</string>


    // InputStuff
    <string name="stuff_input_dialog_label_name">グッズ名を入力</string>
    <string name="stuff_input_dialog_label_price">値段を入力</string>
    <string name="stuff_input_dialog_label_must">絶対欲しい</string>
    <string name="stuff_input_dialog_label_advance">事前物販あり</string>

    // NavigationMenu
    <string name="main_manu_label_calendar">カレンダー</string>
    <string name="main_menu_label_event">イベント</string>
    <string name="main_menu_label_ticket">チケット</string>
    <string name="main_menu_label_settings">設定</string>

    <string-array name="repeat_span">
        <item>毎週</item>
        <item>隔週</item>
        <item>毎月</item>
    </string-array>
</resources>
