<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.fefeyo.otamanekai.view.register.AddProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/input_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_product_label_input_name"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/edit_text_cursor_primary"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/add_product_label_input_name_sample"
                android:text="@={ viewmodel.productName }" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/input_image_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_product_label_input_image"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name_layout" />

        <LinearLayout
            android:id="@+id/input_image_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_image_label">

            <ImageView
                android:id="@+id/input_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@null"
                android:padding="16dp"
                android:src="@drawable/add_placeholder" />

            <TextView
                android:id="@+id/input_image_select_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_product_label_input_image"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/input_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:button="@drawable/favorite_icon"
            android:checked="@={ viewmodel.favorite }"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/common_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_image_container" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:enabled="@{ viewmodel.isSaveAvailable }"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/common_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
